# my-wal

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod
internal/wal/writer/: BUILD.bazel  writer.go
pkg/wal/: wal.go  wal_test.go
proto/: BUILD.bazel  entry.proto
