module(
    name = "my_wal",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "gazelle", version = "0.43.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protobuf", version = "31.0", repo_name = "com_google_protobuf")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = ":go.mod")
use_repo(go_deps, "org_golang_google_protobuf")
